--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <body>
     <header>
         <h1>
-            <img src="https://iili.io/3Mb2TPe.jpg">
+            <img src="https://i.ibb.co/zVGFPjGF/Novo-Projeto.png" width="500" height="120">
         </h1>
         <p>Proteja o que realmente importa</p>
     </header>
@@ -202,7 +202,7 @@
         <h2 style="text-align:center; color:#B22222; margin-top:2rem;">Nossos Produtos</h2>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; padding: 2rem;">
             <div style="background: #fff; border-radius: 10px; padding: 1rem; max-width: 250px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
-                <img src="https://sdmntpreastus2.oaiusercontent.com/files/00000000-6ccc-61f6-871f-0a050f73c882/raw?se=2025-04-26T18%3A07%3A55Z&sp=r&sv=2024-08-04&sr=b&scid=72769f14-20be-585c-8c8a-56c787813a9d&skoid=ac1d63ad-0c69-4017-8785-7a50eb04382c&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-25T23%3A02%3A46Z&ske=2025-04-26T23%3A02%3A46Z&sks=b&skv=2024-08-04&sig=TQfq5jb8H5EdCc6CFgL8McttVwmUgJBfqmfSuoy6pkA%3D" alt="Câmeras de Segurança" style="width:150px; height:auto; margin-bottom:1rem;">
+                <img src="https://i.ibb.co/xv7RM85/4b181328-1b5a-418e-bdab-3ee37189258c.png" alt="Câmeras de Segurança" style="width:100px; height:auto; margin-bottom:1rem;">
                 <h3 style="color:#333;">Câmeras de Segurança</h3>
                 <p style="font-size: 0.9rem;">Câmeras de alta resolução para monitoramento interno e externo.</p>
             </div>
